# innovation

./: .gitignore  MẪU ĐĂNG KÝ SẢN PHẨM SÁNG TẠO (1).docx  Template-bieu-mau.docx  docker-compose.dev.yml  docker-compose.offline.yml  docker-compose.yml  env.production.example
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: admin.py  auth.py  chatbot.py  initiatives.py
backend/app/core/: config.py  database.py  logging.py  security.py
backend/app/models/: __init__.py  audit_log.py  base.py  file.py  initiative.py  user.py
backend/app/schemas/: __init__.py  audit_log.py  auth.py  initiative.py
backend/app/services/: ai_service.py  docx_service.py  minio_service.py
backend/app/templates/: mau_sang_kien.docx
backend/migrations/: env.py
backend/migrations/versions/: 5c905909e135_add_danh_sach_tac_gia_column.py  7171a532f566_initial_baseline_tables.py  bd3c37b0d3af_add_template_fields_to_initiatives.py
docs/: cong-thong-tin-sang-kien-design-brief.md  cong-thong-tin-sang-kien-ui-ux-review.md
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  vite.config.ts
frontend/.openai/: hosting.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/hooks/: useAuth.ts  useInitiativeForm.ts  useInitiatives.ts
frontend/lib/: auth-bypass.ts  types.ts
frontend/lib/api/: client.ts  initiatives.ts
scripts/: build-offline-bundle.sh  load-offline-bundle.sh
