[project]
name = "innovation-backend"
version = "0.1.0"
description = "Backend API for Petrovietnam Innovation Portal"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["app"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking (type checker compatibility)
    "RUF",    # ruff-specific rules
    "S",      # flake8-bandit (security)
    "T20",    # flake8-print (no print statements)
    "ANN",    # flake8-annotations (type annotations)
    "ASYNC",  # flake8-async
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez (timezone-aware datetime)
    "RET",    # flake8-return
]
ignore = [
    "ANN101",  # missing type annotation for self
    "ANN102",  # missing type annotation for cls
    "ANN401",  # dynamically typed expressions (typing.Any)
    "S105",    # hardcoded password (false positives on config keys)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-sort-within-sections = true
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN"]
"app/core/config.py" = ["ANN"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
